code/header/apis/steps_api.h


size_t api_get_allowed_maximum_bus_number();

void api_set_allowed_maximum_bus_number(size_t max_bus);

size_t api_get_device_capacity(const char* device_type);

size_t api_get_area_capacity();

size_t api_get_zone_capacity();

size_t api_get_owner_capacity();

void api_set_device_capacity(const char* device_type, size_t cap);

void api_set_area_capacity(size_t cap);

void api_set_zone_capacity(size_t cap);

void api_set_owner_capacity(size_t cap);



void api_load_powerflow_data_from_file(char* file, char* file_type);

void api_save_powerflow_data_to_file(char* file, char* file_type);

void api_load_dynamic_data_from_file(char* file, char* file_type);

void api_save_dynamic_data_to_file(char* file, char* file_type);



void api_add_bus(size_t bus_number, char* bus_name, double base_voltage_in_kV);

void api_add_generator(size_t bus_number, char* identifier);

void api_add_pe_source(size_t bus_number, char* identifier);

void api_add_load(size_t bus_number, char* identifier);

void api_add_fixed_shunt(size_t bus_number, char* identifier);

void api_add_line(size_t sending_side_bus_number, size_t receiving_side_bus_number, char* identifier);

void api_add_hvdc(size_t rectifier_bus_number, size_t inverter_bus_number, char* identifier);

void api_add_transformer(size_t primary_side_bus_number, size_t secondary_side_bus_number, size_t tertiary_side_bus_number, char* identifier);

void api_add_equivalent_device(size_t bus_number, char* identifier);

void api_add_area(size_t area_number, char* area_name);

void api_add_zone(size_t zone_number, char* zone_name);

void api_add_owner(size_t owner_number, char* owner_name);


size_t api_get_device_count(const char* device_type);

size_t api_get_area_count();

size_t api_get_zone_count();

size_t api_get_owner_count();

void api_show_device_data(const char* device_type);


void api_initialize_bus_search(double vbase_kV_min, double vbase_kV_max, double v_pu_min, double v_pu_max, size_t area, size_t zone, size_t owner);

void api_initialize_all_bus_search();

size_t api_get_current_bus_number();

void api_goto_next_bus();


void api_initialize_device_search(const char* device_type, size_t bus);

size_t api_get_current_device_bus_number(const char* device_type, const char* side);

const char* api_get_current_device_identifier(const char* device_type);

void api_goto_next_device(const char* device_type);


void api_initialize_area_search();

size_t api_get_current_area_number();

void api_goto_next_area();


void api_initialize_zone_search();

size_t api_get_current_zone_number();

void api_goto_next_zone();


void api_initialize_owner_search();

size_t api_get_current_owner_number();

void api_goto_next_owner();


int api_get_bus_integer_data(size_t bus, char* parameter_name);

void api_set_bus_integer_data(size_t bus, char* parameter_name, int value);

double api_get_bus_float_data(size_t bus, char* parameter_name);

void api_set_bus_float_data(size_t bus, char* parameter_name, double value);

const char* api_get_bus_string_data(size_t bus, char* parameter_name);

void api_set_bus_string_data(size_t bus, char* parameter_name, char* value);


int api_get_source_integer_data(size_t bus, char* identifier, char* parameter_name);

void api_set_source_integer_data(size_t bus, char* identifier, char* parameter_name, int value);

double api_get_source_float_data(size_t bus, char* identifier, char* parameter_name);

void api_set_source_float_data(size_t bus, char* identifier, char* parameter_name, double value);

const char* api_get_source_string_data(size_t bus, char* identifier, char* parameter_name);

void api_set_source_string_data(size_t bus, char* identifier, char* parameter_name, char* value);

bool api_get_source_boolean_data(size_t bus, char* identifier, char* parameter_name);

void api_set_source_boolean_data(size_t bus, char* identifier, char* parameter_name, bool value);


int api_get_load_integer_data(size_t bus, char* identifier, char* parameter_name);

void api_set_load_integer_data(size_t bus, char* identifier, char* parameter_name, int value);

double api_get_load_float_data(size_t bus, char* identifier, char* parameter_name);

void api_set_load_float_data(size_t bus, char* identifier, char* parameter_name, double value);

const char* api_get_load_string_data(size_t bus, char* identifier, char* parameter_name);

void api_set_load_string_data(size_t bus, char* identifier, char* parameter_name, char* value);

bool api_get_load_boolean_data(size_t bus, char* identifier, char* parameter_name);

void api_set_load_boolean_data(size_t bus, char* identifier, char* parameter_name, bool value);


int api_get_fixed_shunt_integer_data(size_t bus, char* identifier, char* parameter_name);

void api_set_fixed_shunt_integer_data(size_t bus, char* identifier, char* parameter_name, int value);

double api_get_fixed_shunt_float_data(size_t bus, char* identifier, char* parameter_name);

void api_set_fixed_shunt_float_data(size_t bus, char* identifier, char* parameter_name, double value);

const char* api_get_fixed_shunt_string_data(size_t bus, char* identifier, char* parameter_name);

void api_set_fixed_shunt_string_data(size_t bus, char* identifier, char* parameter_name, char* value);

bool api_get_fixed_shunt_boolean_data(size_t bus, char* identifier, char* parameter_name);

void api_set_fixed_shunt_boolean_data(size_t bus, char* identifier, char* parameter_name, bool value);


int api_get_line_integer_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name);

void api_set_line_integer_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name, int value);

double api_get_line_float_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name);

void api_set_line_float_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name, double value);

const char* api_get_line_string_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name);

void api_set_line_string_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name, char* value);

bool api_get_line_boolean_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name);

void api_set_line_boolean_data(size_t ibus, size_t jbus, char* identifier, char* parameter_name, bool value);


int api_get_transformer_integer_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name);

void api_set_transformer_integer_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name, int value);

double api_get_transformer_float_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name);

void api_set_transformer_float_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name, double value);

const char* api_get_transformer_string_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name);

void api_set_transformer_string_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name, char* value);

bool api_get_transformer_boolean_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name);

void api_set_transformer_boolean_data(size_t ibus, size_t jbus, size_t kbus, char* identifier, char* side, char* parameter_name, bool value);