python/libsteps.py

from ctypes import *
libsteps = CDLL("STEPS_core.dll")

libsteps.api_load_powerflow_data_from_file.restype = None
libsteps.api_load_powerflow_data_from_file.argtypes = (c_char_p, c_char_p)
libsteps.api_load_dynamic_data_from_file.restype = None
libsteps.api_load_dynamic_data_from_file.argtypes = (c_char_p, c_char_p)

libsteps.api_save_powerflow_data_to_file.restype = None
libsteps.api_save_powerflow_data_to_file.argtypes = (c_char_p, c_char_p)
libsteps.api_save_dynamic_data_to_file.restype = None
libsteps.api_save_dynamic_data_to_file.argtypes = (c_char_p, c_char_p)

libsteps.api_get_allowed_maximum_bus_number.restype = c_uint
libsteps.api_get_allowed_maximum_bus_number.argtypes = None

libsteps.api_set_allowed_maximum_bus_number.restype = None
libsteps.api_set_allowed_maximum_bus_number.argtypes = (c_uint, )

libsteps.api_get_device_capacity.restype = c_uint
libsteps.api_get_device_capacity.argtypes = (c_char_p, )
libsteps.api_get_area_capacity.restype = c_uint
libsteps.api_get_area_capacity.argtypes = None
libsteps.api_get_zone_capacity.restype = c_uint
libsteps.api_get_zone_capacity.argtypes = None
libsteps.api_get_owner_capacity.restype = c_uint
libsteps.api_get_owner_capacity.argtypes = None

libsteps.api_set_device_capacity.restype = None
libsteps.api_set_device_capacity.argtypes = (c_char_p, c_uint)
libsteps.api_set_area_capacity.restype = None
libsteps.api_set_area_capacity.argtypes = (c_uint, )
libsteps.api_set_zone_capacity.restype = None
libsteps.api_set_zone_capacity.argtypes = (c_uint, )
libsteps.api_set_owner_capacity.restype = None
libsteps.api_set_owner_capacity.argtypes = (c_uint, )

libsteps.api_get_device_count.restype = c_uint
libsteps.api_get_device_count.argtypes = (c_char_p, )
libsteps.api_get_area_count.restype = c_uint
libsteps.api_get_area_count.argtypes = None
libsteps.api_get_zone_count.restype = c_uint
libsteps.api_get_zone_count.argtypes = None
libsteps.api_get_owner_count.restype = c_uint
libsteps.api_get_owner_count.argtypes = None

libsteps.api_show_device_data.restype = None
libsteps.api_show_device_data.argtypes = (c_char_p, )

libsteps.api_initialize_bus_search.restype = None
libsteps.api_initialize_bus_search.argtypes = (c_double, c_double, c_double, c_double, c_uint, c_uint, c_uint)
libsteps.api_initialize_all_bus_search.restype = None
libsteps.api_initialize_all_bus_search.argtypes = None

libsteps.api_get_current_bus_number.restype = c_uint
libsteps.api_get_current_bus_number.argtypes = None

libsteps.api_goto_next_bus.restype = None
libsteps.api_goto_next_bus.argtypes = None

libsteps.api_initialize_device_search.restype = None
libsteps.api_initialize_device_search.argtypes = (c_char_p, c_uint, )

libsteps.api_get_current_device_bus_number.restype = c_uint
libsteps.api_get_current_device_bus_number.argtypes = (c_char_p, c_char_p)

libsteps.api_get_current_device_identifier.restype = c_char_p
libsteps.api_get_current_device_identifier.argtypes = (c_char_p, )

libsteps.api_goto_next_device.restype = None
libsteps.api_goto_next_device.argtypes = (c_char_p, )

libsteps.api_initialize_area_search.restype = None
libsteps.api_initialize_area_search.argtypes = None

libsteps.api_get_current_area_number.restype = c_uint
libsteps.api_get_current_area_number.argtypes = None

libsteps.api_goto_next_area.restype = None
libsteps.api_goto_next_area.argtypes = None

libsteps.api_initialize_zone_search.restype = None
libsteps.api_initialize_zone_search.argtypes = None

libsteps.api_get_current_zone_number.restype = c_uint
libsteps.api_get_current_zone_number.argtypes = None

libsteps.api_goto_next_zone.restype = None
libsteps.api_goto_next_zone.argtypes = None

libsteps.api_initialize_owner_search.restype = None
libsteps.api_initialize_owner_search.argtypes = None

libsteps.api_get_current_owner_number.restype = c_uint
libsteps.api_get_current_owner_number.argtypes = None

libsteps.api_goto_next_owner.restype = None
libsteps.api_goto_next_owner.argtypes = None

libsteps.api_add_bus.restype = None
libsteps.api_add_bus.argtypes = (c_uint, c_char_p, c_double)
libsteps.api_add_generator.restype = None
libsteps.api_add_generator.argtypes = (c_uint, c_char_p)
libsteps.api_add_pe_source.restype = None
libsteps.api_add_pe_source.argtypes = (c_uint, c_char_p)
libsteps.api_add_load.restype = None
libsteps.api_add_load.argtypes = (c_uint, c_char_p)
libsteps.api_add_fixed_shunt.restype = None
libsteps.api_add_fixed_shunt.argtypes = (c_uint, c_char_p)
libsteps.api_add_line.restype = None
libsteps.api_add_line.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_add_hvdc.restype = None
libsteps.api_add_hvdc.argtypes = (c_uint, c_uint, c_char_p)
libsteps.api_add_transformer.restype = None
libsteps.api_add_transformer.argtypes = (c_uint, c_uint, c_uint, c_char_p)
libsteps.api_add_equivalent_device.restype = None
libsteps.api_add_equivalent_device.argtypes = (c_uint, c_char_p)
libsteps.api_add_area.restype = None
libsteps.api_add_area.argtypes = (c_uint, c_char_p)
libsteps.api_add_zone.restype = None
libsteps.api_add_zone.argtypes = (c_uint, c_char_p)
libsteps.api_add_owner.restype = None
libsteps.api_add_owner.argtypes = (c_uint, c_char_p)




libsteps.api_get_bus_integer_data.restype = (c_int)
libsteps.api_get_bus_integer_data.argtypes = (c_uint, c_char_p)
libsteps.api_get_bus_float_data.restype = (c_double)
libsteps.api_get_bus_float_data.argtypes = (c_uint, c_char_p)
libsteps.api_get_bus_string_data.restype = (c_char_p)
libsteps.api_get_bus_string_data.argtypes = (c_uint, c_char_p)
libsteps.api_set_bus_integer_data.restype = None
libsteps.api_set_bus_integer_data.argtypes = (c_uint, c_char_p, c_int)
libsteps.api_set_bus_float_data.restype = None
libsteps.api_set_bus_float_data.argtypes = (c_uint, c_char_p, c_double)
libsteps.api_set_bus_string_data.restype = None
libsteps.api_set_bus_string_data.argtypes = (c_uint, c_char_p, c_char_p)

libsteps.api_get_load_integer_data.restype = (c_int)
libsteps.api_get_load_integer_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_load_float_data.restype = (c_double)
libsteps.api_get_load_float_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_load_string_data.restype = (c_char_p)
libsteps.api_get_load_string_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_load_boolean_data.restype = (c_bool)
libsteps.api_get_load_boolean_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_set_load_integer_data.restype = None
libsteps.api_set_load_integer_data.argtypes = (c_uint, c_char_p, c_char_p, c_int)
libsteps.api_set_load_float_data.restype = None
libsteps.api_set_load_float_data.argtypes = (c_uint, c_char_p, c_char_p, c_double)
libsteps.api_set_load_string_data.restype = None
libsteps.api_set_load_string_data.argtypes = (c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_set_load_boolean_data.restype = None
libsteps.api_set_load_boolean_data.argtypes = (c_uint, c_char_p, c_char_p, c_bool)

libsteps.api_get_source_integer_data.restype = (c_int)
libsteps.api_get_source_integer_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_source_float_data.restype = (c_double)
libsteps.api_get_source_float_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_source_string_data.restype = (c_char_p)
libsteps.api_get_source_string_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_source_boolean_data.restype = (c_bool)
libsteps.api_get_source_boolean_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_set_source_integer_data.restype = None
libsteps.api_set_source_integer_data.argtypes = (c_uint, c_char_p, c_char_p, c_int)
libsteps.api_set_source_float_data.restype = None
libsteps.api_set_source_float_data.argtypes = (c_uint, c_char_p, c_char_p, c_double)
libsteps.api_set_source_string_data.restype = None
libsteps.api_set_source_string_data.argtypes = (c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_set_source_boolean_data.restype = None
libsteps.api_set_source_boolean_data.argtypes = (c_uint, c_char_p, c_char_p, c_bool)

libsteps.api_get_fixed_shunt_integer_data.restype = (c_int)
libsteps.api_get_fixed_shunt_integer_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_fixed_shunt_float_data.restype = (c_double)
libsteps.api_get_fixed_shunt_float_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_fixed_shunt_string_data.restype = (c_char_p)
libsteps.api_get_fixed_shunt_string_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_get_fixed_shunt_boolean_data.restype = (c_bool)
libsteps.api_get_fixed_shunt_boolean_data.argtypes = (c_uint, c_char_p, c_char_p)
libsteps.api_set_fixed_shunt_integer_data.restype = None
libsteps.api_set_fixed_shunt_integer_data.argtypes = (c_uint, c_char_p, c_char_p, c_int)
libsteps.api_set_fixed_shunt_float_data.restype = None
libsteps.api_set_fixed_shunt_float_data.argtypes = (c_uint, c_char_p, c_char_p, c_double)
libsteps.api_set_fixed_shunt_string_data.restype = None
libsteps.api_set_fixed_shunt_string_data.argtypes = (c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_set_fixed_shunt_boolean_data.restype = None
libsteps.api_set_fixed_shunt_boolean_data.argtypes = (c_uint, c_char_p, c_char_p, c_bool)

libsteps.api_get_line_integer_data.restype = (c_int)
libsteps.api_get_line_integer_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p)
libsteps.api_get_line_float_data.restype = (c_double)
libsteps.api_get_line_float_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p)
libsteps.api_get_line_string_data.restype = (c_char_p)
libsteps.api_get_line_string_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p)
libsteps.api_get_line_boolean_data.restype = (c_bool)
libsteps.api_get_line_boolean_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p)
libsteps.api_set_line_integer_data.restype = None
libsteps.api_set_line_integer_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_int)
libsteps.api_set_line_float_data.restype = None
libsteps.api_set_line_float_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_double)
libsteps.api_set_line_string_data.restype = None
libsteps.api_set_line_string_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_set_line_boolean_data.restype = None
libsteps.api_set_line_boolean_data.argtypes = (c_uint, c_uint, c_char_p, c_char_p, c_bool)

libsteps.api_get_transformer_integer_data.restype = (c_int)
libsteps.api_get_transformer_integer_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_get_transformer_float_data.restype = (c_double)
libsteps.api_get_transformer_float_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_get_transformer_string_data.restype = (c_char_p)
libsteps.api_get_transformer_string_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_get_transformer_boolean_data.restype = (c_bool)
libsteps.api_get_transformer_boolean_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p)
libsteps.api_set_transformer_integer_data.restype = None
libsteps.api_set_transformer_integer_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_int)
libsteps.api_set_transformer_float_data.restype = None
libsteps.api_set_transformer_float_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_double)
libsteps.api_set_transformer_string_data.restype = None
libsteps.api_set_transformer_string_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_char_p)
libsteps.api_set_transformer_boolean_data.restype = None
libsteps.api_set_transformer_boolean_data.argtypes = (c_uint, c_uint, c_uint, c_char_p, c_char_p, c_char_p, c_bool)
